--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ invoke==0.10.1
 #rituals==0.3.0
 -e git+https://github.com/jhermann/rituals.git#egg=rituals
 cookiecutter>=1.3
+pytest==2.7.0
+pytest-spec==0.2.24
 
 hovercraft==2.1
