--- a/.env
+++ b/.env
@@ -2,12 +2,15 @@
 # autoenv script (https://github.com/kennethreitz/autoenv)
 # Use ". .env -h" for help.
 _venv_virtualenv=/usr/bin/virtualenv
-_venv_py3=true # edit to true/false per project
+_venv_py3=true
+_venv_pip_req='pip<8'
+_venv_master_url="https://raw.githubusercontent.com/Springerle/py-generic-project/master/.env"
 
 _venv_temp=/usr/local/bin/virtualenv
 if test ! -x $_venv_virtualenv -a -x $_venv_temp; then
     _venv_virtualenv=$_venv_temp
 fi
+test "${_venv_py3:0:2}" != '{''{' || _venv_py3=false
 if $_venv_py3; then # Python 3 mode?
     # /opt/pyenv, see https://github.com/jhermann/priscilla/tree/master/pyenv
     _venv_temp=/opt/pyenv/bin/pyvenv-3
@@ -87,7 +90,16 @@ while test "${1:0:1}" = "-"; do
             echo "                          (full logs in '.venv/pip-install.log')"
             echo "    -h | --help           this help message"
             echo "    --virtualenv PATH     set explicit path of virtualenv binary to use"
+            echo "    --update              update to the newest master copy"
             return 1
+            ;;
+        --update)
+            python -c "import urllib2; open('/tmp/$USER-py-env-update.py', 'wb').write(urllib2.urlopen('$_venv_master_url').read())"
+            grep "unset _venv_xtrace" "/tmp/$USER-py-env-update.py" >/dev/null || return 1
+            sed -r -e "s/^_venv_py3=.*/_venv_py3=$_venv_py3/" <"/tmp/$USER-py-env-update.py" >.env
+            git diff .env || :
+            echo ".env script update OK"
+            return 0
             ;;
         *) echo "WARNING: Ignored unknown option '$1'" ;;
     esac
@@ -129,13 +141,13 @@ elif pwd | egrep -v '/{''{''.*''}''}(/|$)' >/dev/null || $_venv_create; then
             # Create, activate, and update virtualenv
             $_venv_virtualenv ".venv/$_venv_name"
             . ".venv/$_venv_name/bin/activate"
-            ".venv/$_venv_name/bin/pip" --log ".venv/pip-install.log" install -U pip 2>&1 | _venv_pip_log \
+            ".venv/$_venv_name/bin/pip" --log ".venv/pip-install.log" install -U "$_venv_pip_req" 2>&1 | _venv_pip_log \
                 || echo >&2 "!!! pip failed, see .venv/pip-install.log for details"
             ".venv/$_venv_name/bin/pip" --log ".venv/pip-install.log" install -U "setuptools>=14.3" "wheel>=0.24.0" 2>&1 | _venv_pip_log \
                 || echo >&2 "!!! pip failed, see .venv/pip-install.log for details"
 
             # Get rid of cruft some older systems produce
-            ".venv/$_venv_name/bin/pip" --log ".venv/pip-install.log" uninstall --yes distribute || :
+            ".venv/$_venv_name/bin/pip" --log ".venv/pip-install.log" uninstall --yes distribute >/dev/null 2>&1 || :
 
             # pypandoc fails when the base package is missing, so we install it here, if possible
             if which pandoc >/dev/null ; then
@@ -170,6 +182,6 @@ elif pwd | egrep -v '/{''{''.*''}''}(/|$)' >/dev/null || $_venv_create; then
 fi
 
 unset _venv_script _venv_name _venv_ask _venv_create _venv_develop _venv_pip_log _venv_base
-unset _venv_readlink _venv_temp _venv_virtualenv _venv_verbose _venv_py3
+unset _venv_readlink _venv_temp _venv_virtualenv _venv_verbose _venv_py3 _venv_pip_req _venv_master_url
 eval $_venv_xtrace # restore xtrace state
 unset _venv_xtrace
