Invoke updated to 0.13.0

--- a/{{cookiecutter.repo_name}}/requirements.txt
+++ b/{{cookiecutter.repo_name}}/requirements.txt
@@ -2,8 +2,8 @@
 # Project's virtualenv requirements
 #
 
-pip<8
-invoke==0.12.2
+##cython
+invoke==0.13.0
 #rituals==0.3.0
 -e git+https://github.com/jhermann/rituals.git#egg=rituals
 
