--- a/.env
+++ b/.env
@@ -71,7 +71,7 @@ while test "${1:0:1}" = "-"; do
     case "$1" in
         --yes) _venv_create=true ;;
         --develop) _venv_develop=true ;;
-        --verbose | -v) _venv_verbose=true ;;
+        --verbose | -v) _venv_verbose=true; set -x ;;
         --virtualenv) shift; _venv_virtualenv="$1" ;;
         --help | -h)
             #     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -94,7 +94,14 @@ while test "${1:0:1}" = "-"; do
             return 1
             ;;
         --update)
-            python -c "import urllib2; open('/tmp/$USER-py-env-update.py', 'wb').write(urllib2.urlopen('$_venv_master_url').read())"
+            python <<EOF
+if 1:
+                try:
+                    from urllib.request import urlopen
+                except ImportError:
+                    from urllib2 import urlopen
+                open('/tmp/$USER-py-env-update.py', 'wb').write(urlopen('$_venv_master_url').read())
+EOF
             grep "unset _venv_xtrace" "/tmp/$USER-py-env-update.py" >/dev/null || return 1
             sed -r -e "s/^_venv_py3=.*/_venv_py3=$_venv_py3/" <"/tmp/$USER-py-env-update.py" >.env
             git diff .env || :
